Multithread benchmarks
Signed-off-by: qchea <qchea@amazon.com>